[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gridcast"
version = "0.1.0"
description = "Architecture hydro-dynamique continue pour ARC-Prize 2026"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "torch",
    "numpy",
    "plotly",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gridcast*"]